--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="#service">Tentang saya</a></li>
-                    <li><a href="#portofolios">portofolio</a></li>
-                    <li><a href="#skills">skill</a></li>
+                    <li><a href="#portofolios">projek</a></li>
                     <li><a href="#contact">kontak</a></li>
                     <li><a href="/resume.pdf" target="_blank">
                         <button class="btn">CV</button>
