--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#service">Tentang saya</a></li>
                     <li><a href="#portofolios">projek</a></li>
                     <li><a href="#contact">kontak</a></li>
-                    <li><a href="/resume.pdf" target="_blank">
+                    <li><a href="/resume.pdf">
                         <button class="btn">CV</button>
                     </a></li>
                 </ul>
